# openlifu-test-scripts

./: README.md  plotfiles.py  pyproject.toml  requirements.txt
openlifu_verification/: PRODREQS-85_Sonication_Duration.py  pinmap_1x.json  pinmap_2x.json  prodreqs_base_class.py  prodreqs_tx_long_verification_test.py  prodreqs_tx_short_verification_test.py  tst05_thermal_stress.py
verification/: PRODREQS-85_Sonication_Duration.py  config.py  prodreqs-run-indefinitely-placeholder.py  prodreqs-transmitter-heating-placeholder.py  prodreqs-voltage-accuracy-placeholder.py  prodreqs_base_class.py  prodreqs_console_voltage_accuracy.py  prodreqs_run_indefinitely_placeholder.py  prodreqs_transmitter_heating_and_console_stability.py  prodreqs_transmitter_heating_placeholder.py  prodreqs_transmitter_sanity_check.py  prodreqs_tx_short_verification_test.py  prodreqs_voltage_accuracy_placeholder.py  run_indefinitely.py  test_monitor_temperature_continuous.py
verification/archive/: PRODREQS-85_Sonication_Duration.py
verification/openlifu/: __init__.py  _version.py  geo.py
verification/openlifu/plan/: __init__.py  solution.py
verification/openlifu/xdc/: transducer.py
verification/temp_scripts/: get_single_temperature_reading.py  get_temperature_reading_after_1hr.py  get_temperature_reading_every_5_mins_12v_cycle.py  get_temperature_reading_every_5_mins_12v_on.py  monitor_temperature_indefinitely.py
