[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openlifu-test-scripts"
version = "1.1.1"
authors = [
  { name = "Alex Kagan", email = "akagan@openwater.cc" },
]
description = "Openwater LIFU Verification Tests"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<=3.12.13"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "openlifu-sdk",  
]

[project.urls]
Homepage = "https://github.com/OpenwaterHealth/openlifu-test-scripts"
"Bug Tracker" = "https://github.com/OpenwaterHealth/openlifu-test-scripts/issues"

[tool.hatch.build.targets.wheel]
packages = ["verification"]