[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openlifu-verification"
version = "1.1.2"
authors = [
  { name = "Alex Kagan", email = "akagan@openwater.cc" },
]
description = "Openwater LIFU Verification Tests"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<=3.12.13"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Typing :: Typed",
]
dependencies = [
  "openlifu-sdk",  
]

[project.urls]
Homepage = "https://github.com/OpenwaterHealth/openlifu-test-scripts"
"Bug Tracker" = "https://github.com/OpenwaterHealth/openlifu-test-scripts/issues"

[tool.hatch.build.targets.wheel]
packages = ["openlifu_verification"]